# tauri-messenger

./: .editorconfig  .gitignore
app/: README.md  angular.json  package-lock.json  package.json  test-setup.ts  tsconfig.json  tsconfig.spec.json  vitest.config.ts
app/.angular/cache/20.3.15/aim/: .tsbuildinfo
app/.angular/cache/21.1.2/aim/: .tsbuildinfo
app/dist-isolation/: index.html  index.js
app/src/: index.html  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: chat.json  default.json  generic.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: create_screen_name.rs  http.rs  mod.rs  screen_names.rs  user.rs
app/src-tauri/src/database/: setup.rs
app/src-tauri/src/security/: keys.rs
app/src/app/: app.component.html  app.component.ts  app.routes.ts
app/src/app/components/: index.ts
app/src/app/components/chat-footer/: chat-footer.css  chat-footer.html  chat-footer.spec.ts  chat-footer.ts
app/src/app/schemas/: screen-name.ts
app/src/app/services/: invoke-service.spec.ts  invoke-service.ts
app/src/app/util/: index.ts  lipsum.ts  window-builder.ts
app/src/app/window-builder/: index.ts
app/src/assets/styles/: ql-overrides.css  xp-overrides.css  xp.css
server/: .air.toml  go.mod  go.sum  main.go
server/internal/database/: database.go  redis.go
server/internal/http/: encode.go  handlers.go  models.go  routes.go  server.go
server/internal/users/: service.go
server/migrations/: 20260120001054_initial.sql  20260121024259_add_users_table.sql  migrations.go
(+42 files in other folders)
